@@ -1,17 +1,18 @@
 package ru.yandex.practicum.filmorate.controller;
 
-
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
-import ru.yandex.practicum.filmorate.exception.ValidationException;
+import ru.yandex.practicum.filmorate.model.Event;
+import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.service.UserService;
 
-import java.time.LocalDate;
 import java.util.Collection;
-
+import java.util.List;
 import java.util.Set;
 
 @Slf4j
@@ -22,69 +23,82 @@ public class UserController {
 
     private final UserService userService;
 
+    @DeleteMapping("/{userId}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public void deleteUser(@PathVariable Long userId) {
+        log.info("Запрос на удаление пользователя с id: {}", userId);
+        userService.delete(userId);
+    }
+
     @GetMapping
     public Collection<User> findAll() {
+        log.info("Запрос на получение всех пользователей");
         return userService.findAll();
     }
 
     @PostMapping
-    public User create(@RequestBody User user) {
+    @ResponseStatus(HttpStatus.CREATED)
+    public User create(@Valid @RequestBody User user) {
         log.info("Получен запрос на создание пользователя: {}", user.getLogin());
-        validateUser(user);
+        setDefaultNameIfEmpty(user);
         return userService.create(user);
     }
 
     @PutMapping
-    public User update(@RequestBody User user) {
-        validateUser(user);
+    public User update(@Valid @RequestBody User user) {
+        log.info("Запрос на обновление пользователя с id: {}", user.getId());
+        setDefaultNameIfEmpty(user);
         return userService.update(user);
     }
 
     @GetMapping("/{id}/friends")
     public Set<User> getFriends(@PathVariable Long id) {
+        log.info("Запрос на получение друзей пользователя с id: {}", id);
         return userService.getFriends(id);
     }
 
     @GetMapping("/{id}/friends/common/{friendId}")
     public Set<User> getCommonFriends(@PathVariable Long id, @PathVariable Long friendId) {
+        log.info("Запрос на получение общих друзей пользователей {} и {}", id, friendId);
         return userService.getCommonFriends(id, friendId);
     }
 
     @PutMapping("{id}/friends/{friendId}")
     public void addFriend(@PathVariable Long id, @PathVariable Long friendId) {
+        log.info("Запрос на добавление друга {} пользователю {}", friendId, id);
         userService.addFriend(id, friendId);
     }
 
     @DeleteMapping("{id}/friends/{friendId}")
     public void deleteFriend(@PathVariable Long id, @PathVariable Long friendId) {
+        log.info("Запрос на удаление друга {} у пользователя {}", friendId, id);
         userService.deleteFriend(id, friendId);
     }
 
     @GetMapping("/{id}")
     public User findById(@PathVariable Long id) {
+        log.info("Запрос на получение пользователя с id: {}", id);
         return userService.findById(id)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id = " + id + " не найден"));
     }
 
+    @GetMapping("/{id}/feed")
+    public List<Event> getFeed(@PathVariable Long id) {
+        log.info("Получен запрос на получение ленты событий пользователя с id = {}", id);
+        return userService.getFeed(id);
+    }
 
-    public void validateUser(User user) {
-        if (user.getEmail() == null || user.getEmail().isBlank() || !user.getEmail().contains("@")) {
-            log.warn("Ошибка валидации: неверный email у пользователя {}", user.getLogin());
-            throw new ValidationException("Электронная почта не может быть пустой и должна содержать символ @");
-        }
+    @GetMapping("/{id}/recommendations")
+    public List<Film> getRecommendations(@PathVariable Long id) {
+        log.info("Запрос на получение рекомендаций для пользователя с id: {}", id);
+        return userService.getRecommendations(id);
+    }
 
-        if (user.getLogin() == null || user.getLogin().isBlank() || user.getLogin().contains(" ")) {
-            log.warn("Ошибка валидации: логин пустой или содержит пробелы {}", user.getLogin());
-            throw new ValidationException("Логин не может быть пустым и содержать пробелы");
-        }
-
-        if (user.getBirthday() == null || user.getBirthday().isAfter(LocalDate.now())) {
-            log.warn("Ошибка валидации: пользователь {} неверно указал дату рождения {}", user.getLogin(), user.getBirthday());
-            throw new ValidationException("Укажите верную дату рождения");
-        }
-
-        if (user.getName() == null || user.getName().isBlank()) {
+    private void setDefaultNameIfEmpty(User user) {
+        if (user.getName() == null || user.getName().trim().isEmpty()) {
+            log.debug("Имя пользователя не указано, устанавливаем имя равным логину: {}", user.getLogin());
             user.setName(user.getLogin());
         }
+        log.debug("Пользователь с логином '{}' прошел валидацию", user.getLogin());
     }
 }
